app/assets/stylesheets/app-bar.scss
#app-bar {

  @include plaintext-font();
  background: lighten($darker-color, 6%);
       color: $lighter-color;
   font-size: 1.05em;
       width: 100%;
      height: 30px;
  text-align: left;
     padding: { left: 7px; top: 0px; bottom: 2px; }
    position: fixed;
      bottom: 0px;
     z-index: 1000;

  #yin-yang-logo {
      cursor: pointer;
    position: relative;
         top: 3px;
      margin: { right: 5px; }
      img { height: 20px; width: 20px; }
  }

  #help-button {
    @include non-code-font();
     padding: { right: 5px; bottom: 2px; }
      margin: { top: 4px; right: 5px; }
       color: darken($darker-color, 10%);
  text-align: right;
   font-size: 0.87em;
       width: 38px;
  }

  #tweet-container {
    #twitter-widget-0 {
      position: relative;
           top: 5px;
        margin: { top: 7px; right: 4px; }
    }
  }

  #accu-container {
    #accu-image {
      @include rounded-corner(3px);
      background: CornSilk;
         padding: 5px;
           width: 50px;
          margin: { top: 7px; right: 4px; }
    }
  }

  #cucumber-container {
    #cucumber-image {
      padding: 0px;
       height: 27px;
       margin: { right: 4px; }
    }
  }

  #options-button {
    @include non-code-font();
       padding: { right: 5px; bottom: 2px; }
        margin: { top: 4px; }
         color: darken($darker-color, 10%);
    text-align: right;
     font-size: 0.87em;
         width: 55px;
  }

  #message {
    padding-left: 10px;
    font-size: 0.87em;
  }

}

#options-dialog {
  th:first-child, td:first-child {
    text-align: right;
  }

  #syntax-highlight-button {
    @include non-code-font();
    margin-top: 4px;
    padding: { top: 2px; bottom: 2px; right: 5px; }
    color: darken($darker-color, 10%);
    text-align: center;
    font-size: 0.87em;
  }
}

